- Fixed drawer and info card z-index - Removed mobile info card from small window sizes on desktop

--- a/src/interface/search.scss
+++ b/src/interface/search.scss
@@ -66,10 +66,14 @@ $search-width: 400px;
     align-items: start;
 
     // Full-width on mobile
-    @media (max-width: $max-width) {
-        // width: unset;
-        // right: 0;
-        // left: 0;
+    @media (max-width: $max-width) and (hover: hover) {
+        width: unset;
+        right: 0;
+        left: 0;
+    }
+
+    // Display bottom sheet instead
+    @media (max-width: $max-width) and (hover: none) {
         display: none;
     }
 
@@ -114,7 +118,7 @@ $search-width: 400px;
 .info-card-mobile {
     display: none;
 
-    @media (max-width: $max-width) {
+    @media (max-width: $max-width) and (hover: none) {
         display: unset;
     }
 }
@@ -124,8 +128,11 @@ $search-width: 400px;
     width: 420px;
     height: 250px;
 
-    @media (max-width: $max-width) {
-        // width: 100%;
+    @media (max-width: $max-width) and (hover: hover) {
+        width: 100%;
+    }
+
+    @media (max-width: $max-width) and (hover: none) {
         display: none;
     }
 }
@@ -136,7 +143,7 @@ $search-width: 400px;
     height: unset !important;
     margin-bottom: 20px;
 
-    @media (max-width: $max-width) {
+    @media (max-width: $max-width) and (hover: none) {
         display: unset !important;
     }
 }
@@ -145,7 +152,7 @@ $search-width: 400px;
     padding: $content-padding;
     padding-top: 10px;
 
-    @media (max-width: $max-width) {
+    @media (max-width: $max-width) and (hover: none) {
         padding-top: 20px;
     }
 }
@@ -159,7 +166,7 @@ $search-width: 400px;
         right: calc($content-padding - $close-btn-padding - $scrollbar-width);
     }
 
-    @media (max-width: $max-width) {
+    @media (max-width: $max-width) and (hover: none) {
         display: none;
     }
 }
